# mullemeck

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  build.html  db.html  index.html  mail.html  paginator.html  processing.html  pyproject.toml  pytest.ini  routes.html  settings.html  utils.html
backend/: .gitignore
mullemeck/: __init__.py  __main__.py  build.py  config.py  db.py  email.py  experiment.py  mail.py  paginator.py  processing.py  routes.py  settings.py  utils.py
mullemeck/backend/: __init__.py  __main__.py  build.py  email.py  routes.py
mullemeck/frontend/: __init__.py
mullemeck/templates/: build.html  build_email.html  build_list.html  build_view.html  index.html
tests/: test_build.py  test_config.py  test_db.py  test_mail.py  test_mullemeck.py  test_settings.py
tests/test_backend/: test_backend.py  test_mail.py
tests/test_frontend/: test_frontend.py  test_paginator.py
