[tool.poetry]
name = "mullemeck"
version = "0.1.0"
description = ""
authors = ["Toni Karppi <karppitoni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.8"
flask = "^1.0"
psycopg2 = "^2.7"
validator_collection = "^1.3"
python-dotenv = "^0.10.1"
sqlalchemy = "^1.2"
flask-mail = "^0.9.1"
pytest = "^3.0"
pre-commit = "^1.14"
pdoc3 = "^0.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.2"
rope = "^0.11.0"
flake8 = "^3.7"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
